--- a/crystal-game/src/index.css
+++ b/crystal-game/src/index.css
@@ -1,10 +1,19 @@
+html {
+  color: white;
+  text-align: center;
+}
+.header{
+  text-decoration-line: underline;
+  text-decoration-style: dotted;
+}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  min-height: 100vh;
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  background: white;
+  background: url(./background.png);
+  background-size: cover;
 }
 
 code {
