--- a/crystal-game/src/index.css
+++ b/crystal-game/src/index.css
@@ -6,10 +6,53 @@ html {
   text-decoration-line: underline;
   text-decoration-style: dotted;
 }
-.instructions {
+.start {
   color: black;
   background: rgba(208, 228, 245, 0.4) no-repeat scroll 0 0;
 }
+
+#instructions-header{
+  padding-top: 15px;
+  margin-bottom: 10px;
+}
+
+.myButton {
+	box-shadow: 0px 1px 0px 0px #f0f7fa;
+	background:linear-gradient(to bottom, #33bdef 5%, #1e3445 100%);
+	background-color:#1e3445;
+	border-radius:6px;
+	border:1px solid #057fd0;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:6px 24px;
+	text-decoration:none;
+	text-shadow:0px -1px 0px #5b6178;
+}
+.myButton:hover {
+	background:linear-gradient(to bottom, #019ad2 5%, #33bdef 100%);
+	background-color:#019ad2;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
+}
+
+.game-lobby{
+  font-size: large;
+}
+.images:hover {
+	background:rgba(255, 0, 0, 0.8);
+}
+.images:active {
+	position:relative;
+	top:3px;
+}
+
+        
 body {
   min-height: 100vh;
   display: grid;
@@ -42,7 +85,7 @@ className='imagesDiv' */
     display: grid;
     grid-template-columns:  repeat(2, auto);
     grid-template-rows: repeat(3, auto);
-    gap: 1rem;
+    gap: 4px;
   }
 
   .content.first .NumDiv {
