--- a/crystal-game/src/index.css
+++ b/crystal-game/src/index.css
@@ -11,48 +11,47 @@ html {
   background: rgba(208, 228, 245, 0.4) no-repeat scroll 0 0;
 }
 
-#instructions-header{
+#instructions-header {
   padding-top: 15px;
   margin-bottom: 10px;
 }
 
 .myButton {
-	box-shadow: 0px 1px 0px 0px #f0f7fa;
-	background:linear-gradient(to bottom, #33bdef 5%, #1e3445 100%);
-	background-color:#1e3445;
-	border-radius:6px;
-	border:1px solid #057fd0;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:Arial;
-	font-size:15px;
-	font-weight:bold;
-	padding:6px 24px;
-	text-decoration:none;
-	text-shadow:0px -1px 0px #5b6178;
+  box-shadow: 0px 1px 0px 0px #f0f7fa;
+  background: linear-gradient(to bottom, #33bdef 5%, #1e3445 100%);
+  background-color: #1e3445;
+  border-radius: 6px;
+  border: 1px solid #057fd0;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: Arial;
+  font-size: 15px;
+  font-weight: bold;
+  padding: 6px 24px;
+  text-decoration: none;
+  text-shadow: 0px -1px 0px #5b6178;
 }
 .myButton:hover {
-	background:linear-gradient(to bottom, #019ad2 5%, #33bdef 100%);
-	background-color:#019ad2;
+  background: linear-gradient(to bottom, #019ad2 5%, #33bdef 100%);
+  background-color: #019ad2;
 }
 .myButton:active {
-	position:relative;
-	top:1px;
+  position: relative;
+  top: 1px;
 }
 
-.game-lobby{
+.game-lobby {
   font-size: large;
 }
 .images:hover {
-	background:rgba(255, 0, 0, 0.8);
+  background: rgba(255, 0, 0, 0.8);
 }
 .images:active {
-	position:relative;
-	top:3px;
+  position: relative;
+  top: 3px;
 }
 
-        
 body {
   min-height: 100vh;
   display: grid;
@@ -63,27 +62,60 @@ body {
   background-size: cover;
 }
 
-#root{
-  background: rgb(37, 59, 78,0.8)
+#root {
+  background: rgb(37, 59, 78, 0.8);
 }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-/* className="NumDiv"
-className='ScoresDiv
-className='imagesDiv' */
-/* 
-.content.first article {
-  grid-column: 1;
-  grid-row: span 3;
-  background: linear-gradient(to bottom, #65cc3e 0%, #41c300 50%, #2eb300 100%);
+/* Modal */
+
+.modal-outer {
+  display: grid;
+  background: rgba(211, 47, 47);
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  top: 0;
+  left: 0;
+  justify-content: center;
+  align-items: center;
+  /* Hide this modal until we need it */
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 1s;
+}
+
+.modal-outer img {
+  width: 100%;
+}
+
+.modal-outer.open {
+  opacity: 1;
+  pointer-events: all;
+}
+
+.modal-inner {
+  max-width: 600px;
+  min-width: 400px;
+  padding: 2rem;
+  border-radius: 5px;
+  min-height: 200px;
+
+  background: rgba(213, 0, 0, 0.9);
+  /* transform: translateY(-200%); */
+  /* transition: transform .8s; */
+}
+
+/* .modal-outer.open .modal-inner {
+  transform: translateY(0);
 } */
 
 @media only screen and (min-width: 412px) {
   .game-lobby {
     display: grid;
-    grid-template-columns:  repeat(2, auto);
+    grid-template-columns: repeat(2, auto);
     grid-template-rows: repeat(3, auto);
     gap: 4px;
   }
@@ -98,25 +130,23 @@ className='imagesDiv' */
     width: 250px;
   }
   .imagesDiv1 #image1.images {
-    grid-column: 1 ;
+    grid-column: 1;
     grid-row: 2;
     width: 250px;
   }
   .imagesDiv2 #image2.images {
-    grid-column: 2 ;
+    grid-column: 2;
     grid-row: 2;
     width: 250px;
   }
   .imagesDiv3 #image3.images {
-    grid-column: 1 ;
+    grid-column: 1;
     grid-row: 3;
     width: 250px;
   }
   .imagesDiv4 #image4.images {
-    grid-column: 2 ;
+    grid-column: 2;
     grid-row: 3;
     width: 250px;
   }
-  
 }
-
